---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useClientMount$, useStore, useTask$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import threejs from 'threejs';
import { a } from './keep';
import { b } from '../keep2';
import { c } from '../../remove';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useClientMount$(async () => {
		state.text = await mongo.users();
		redis.set(state.text, a, b, c);
	});

	useTask$(() => {
		// Code
	});

	return (
		<div
			shouldRemove$={() => state.text}
			onClick$={() => console.log('parent', state, threejs)}
		>
			<Div
				onClick$={() => console.log('keep')}
				render$={() => state.text}
			/>
			{state.text}
		</div>
	);
});

============================= components/component.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export const Parent = componentQrl(qrl(() => import("./component.tsx_Parent_component_t6Wy3C0Q0XM.js"), "Parent_component_t6Wy3C0Q0XM"));


None
============================= ./components/component.tsx_Parent_component_useTask_ngmvcygWux8.js (ENTRY POINT)==

export const Parent_component_useTask_ngmvcygWux8 = () => {};


None
/*
{
  "origin": "components/component.tsx",
  "name": "Parent_component_useTask_ngmvcygWux8",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component_useTask",
  "hash": "ngmvcygWux8",
  "canonicalFilename": "component.tsx_Parent_component_useTask_ngmvcygWux8",
  "path": "./components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Parent_component_useTask_ngmvcygWux8",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./components/component.tsx_Parent_component_t6Wy3C0Q0XM.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
export const Parent_component_t6Wy3C0Q0XM = () => {
	const state = useStore({ text: "" });
	useClientMountQrl(qrl(() => import("./component.tsx_Parent_component_useClientMount_Yn2kIDABoYw.js"), "Parent_component_useClientMount_Yn2kIDABoYw", [state]));
	useTaskQrl(qrl(() => import("./component.tsx_Parent_component_useTask_ngmvcygWux8.js"), "Parent_component_useTask_ngmvcygWux8"));
	return /*#__PURE__*/ _jsxSorted("div", {
		shouldRemove$: useTaskQrl(qrl(() => import("./component.tsx_Parent_component_useTask_ngmvcygWux8.js"), "Parent_component_useTask_ngmvcygWux8")),
		on:click: useClientMountQrl(qrl(() => import("./component.tsx_Parent_component_useClientMount_Yn2kIDABoYw.js"), "Parent_component_useClientMount_Yn2kIDABoYw", [state]))
	}, null, [_jsxSorted(Div, {
		onClick$: qrl(() => import("./component.tsx.js"), "Parent_component_div_Div_onClick"),
		render$: qrl(() => import("./component.tsx.js"), "Parent_component_div_Div_render", [state])
	}, null, null, 3, null), state.text], 1, null);
};


None
/*
{
  "origin": "components/component.tsx",
  "name": "Parent_component_t6Wy3C0Q0XM",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component",
  "hash": "t6Wy3C0Q0XM",
  "canonicalFilename": "component.tsx_Parent_component_t6Wy3C0Q0XM",
  "path": "./components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Parent_component_t6Wy3C0Q0XM",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./components/component.tsx_Parent_component_useClientMount_Yn2kIDABoYw.js (ENTRY POINT)==

import { c } from "../../remove";
import { b } from "../keep2";
import { a } from "./keep";
import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useClientMount_Yn2kIDABoYw = async () => {
	const [state] = useLexicalScope();
	state.text = await mongo.users();
	redis.set(state.text, a, b, c);
};


None
/*
{
  "origin": "components/component.tsx",
  "name": "Parent_component_useClientMount_Yn2kIDABoYw",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component_useClientMount",
  "hash": "Yn2kIDABoYw",
  "canonicalFilename": "component.tsx_Parent_component_useClientMount_Yn2kIDABoYw",
  "path": "./components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Parent_component_useClientMount_Yn2kIDABoYw",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
